--- a/HT_Player_ViewController.xib
+++ b/HT_Player_ViewController.xib
@@ -115,7 +115,7 @@
                             </connections>
                         </button>
                         <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="loading" translatesAutoresizingMaskIntoConstraints="NO" id="7Yi-TM-NrA">
-                            <rect key="frame" x="145" y="55.999999999999993" width="85.000000000000014" height="85.000000000000014"/>
+                            <rect key="frame" x="145" y="56" width="85" height="85"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="85" id="SQv-hV-HaV"/>
                                 <constraint firstAttribute="height" constant="85" id="eC3-XD-efp"/>
@@ -237,7 +237,7 @@
                             </connections>
                         </button>
                         <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="loading" translatesAutoresizingMaskIntoConstraints="NO" id="Rkz-dZ-iey">
-                            <rect key="frame" x="156.5" y="67.5" width="62.000000000000014" height="62.000000000000014"/>
+                            <rect key="frame" x="156.5" y="67.5" width="62" height="62"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="62" id="B4z-gN-J26"/>
                                 <constraint firstAttribute="width" constant="62" id="ENW-Xs-Ixp"/>
